# librify

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  DockerFile  Dockerfile  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
src/books/: models.py  module.py
src/common/: constants.py  mongo_orm.py  roles.py
src/config/: __init__.py  envs.py
src/users/: dependencies.py  models.py  repository.py  routes.py  services.py  session_repository.py  session_routes.py  session_services.py  types.py  utils.py
tests/integration_tests/: conftest.py  test_users.py
tests/integration_tests/fixtures/: user_fixtures.py
tests/unit_tests/: conftest.py  interfaces.py  mock_models.py  test_users.py
tests/unit_tests/fixtures/: mongo_fixtures.py  user_fixtures.py
tests/unit_tests/fixtures/results/: users_results.py
tests/unit_tests/mock_collection/: user_collection.py
tests/unit_tests/mongo/: mock_motor.py  users.py
