[tool.poetry]
name = "librify"
version = "0.1.0"
description = "Librify is a web application that allows you to organize and manage your personal digital library"
authors = ["Facundo Veronelli <fveronelli@gruposimpli.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pydantic = {extras = ["email"], version = "^1.10.9"}
motor = "^3.2.0"
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"
aiounittest = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
